syntax = "proto3";

package meta;

import "rustproto.proto";

option (rustproto.lite_runtime_all) = true;

message BlockIndex {
  // first key of the block
  bytes key = 1;
  uint64 offset = 2;
  uint32 len = 3;
}

message TableIndex {
  repeated BlockIndex blocks = 1;
  uint64 max_version = 2;
  uint64 key_count = 3;
}

message ManifestChangeSet {
  repeated ManifestChange changes = 1;
}

message ManifestChange {
  fixed64 table_id = 1;
  fixed32 level_id = 2; // only for add
  ManifestOperation operation = 3;
}

enum ManifestOperation {
  ADD = 0;
  DELETE = 1;
}